[project]
name = "copt"
version = "0.1.0"
description = "A small demo of the ORTools-based vehicle routing problem solution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "osmnx<2",
    "numpy>=1.26",
    "pandas>2",
    "networkx",
    "shapely",
    "geopandas",
    "tqdm",
    "ortools",
    "folium",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true 
